--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -108,14 +108,14 @@ footer p {
   font-weight: 300;
 }
 
-body {
+/* body {
   font-family: "Source Sans Pro", sans-serif;
   color: white;
   font-weight: 300;
   background: rgba(209, 161, 29, 0.93);
   width: 100%;
   height: 100%;
-}
+} */
 
 .container {
   margin: 10% auto;
@@ -144,7 +144,7 @@ body {
   font-weight: 300;
 }
 
-button {
+/* button {
   appearance: none;
   outline: 0;
   background-color: white;
@@ -156,4 +156,4 @@ button {
   border-radius: 3px;
   width: 250px;
   font-size: 18px;
-}
+} */
