--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -47,12 +47,14 @@ footer p {
 .note h1 {
   font-size: 1.1em;
   margin-bottom: 6px;
+  color:rgb(15, 15, 15)
 }
 .note p {
   font-size: 1.1em;
   margin-bottom: 10px;
   white-space: pre-wrap;
   word-wrap: break-word;
+  color:rgb(15, 15, 15)
 }
 
 .note button {
@@ -61,7 +63,9 @@ footer p {
   margin-right: 10px;
   color: #f5ba13;
   border: none;
-  width: 36px;
+  padding: 5px;
+  border-radius: 5px;
+  /* width: 36px; */
   height: 36px;
   cursor: pointer;
   outline: none;
@@ -108,14 +112,14 @@ footer p {
   font-weight: 300;
 }
 
-/* body {
+body {
   font-family: "Source Sans Pro", sans-serif;
   color: white;
   font-weight: 300;
-  background: rgba(209, 161, 29, 0.93);
+  background: rgba(238, 183, 33, 0.93);
   width: 100%;
   height: 100%;
-} */
+}
 
 .container {
   margin: 10% auto;
@@ -144,7 +148,7 @@ footer p {
   font-weight: 300;
 }
 
-/* button {
+.logres {
   appearance: none;
   outline: 0;
   background-color: white;
@@ -156,4 +160,4 @@ footer p {
   border-radius: 3px;
   width: 250px;
   font-size: 18px;
-} */
+}
