--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -13,6 +13,9 @@ body {
 
 header {
   background-color: #f5ba13;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   margin: auto -16px;
   padding: 16px 32px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
@@ -22,6 +25,19 @@ header h1 {
   color: #fff;
   font-family: "McLaren", cursive;
   font-weight: 200;
+}
+
+header button {
+  position: relative;
+  float: right;
+  margin-right: 10px;
+  color: #f5ba13;
+  border: none;
+  padding: 5px;
+  border-radius: 5px;
+  height: 36px;
+  cursor: pointer;
+  outline: none;
 }
 
 footer {
